Services, Jwt, Resuls, Roles ,Automapper added

--- a/ApartmentManagmentSystem/appsettings.json
+++ b/ApartmentManagmentSystem/appsettings.json
@@ -1,6 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-KRNCUB4\\SQLEXPRESS;Initial Catalog=BorcYonetimi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnectionString": "Data Source=DESKTOP-KRNCUB4\\SQLEXPRESS;Initial Catalog=ApartmentManagment;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "TokenOptions": {
+    "Audience": "https://github.com/huseyinafsin",
+    "Issuer": "https://github.com/huseyinafsin",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "ShVmYq3t6w9z$B&E)H@McQfTjWnZr4u7x!A%D*F-JaNdRgUkXp2s5v8y/B?E(H+K"
+
   },
   "Logging": {
     "LogLevel": {
