--- a/Bussiness/Bussiness.csproj
+++ b/Bussiness/Bussiness.csproj
@@ -9,9 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Abstracts\" />
     <Folder Include="Concrete\" />
-    <Folder Include="Configuration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
   </ItemGroup>
 
 </Project>
