--- a/PaymentService/appsettings.json
+++ b/PaymentService/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "PaymentServiceStoreSettings": {
+    "DatabaseName": "payments",
+    "ConnectionStrings": "mongodb+srv://huseyin:dcY8LWED0m9ZlwtZ@cluster0.60n71um.mongodb.net/?retryWrites=true&w=majority"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
