added auth based on roles and added some services.

--- a/ApartmentManagmentSystem/appsettings.json
+++ b/ApartmentManagmentSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-KRNCUB4\\SQLEXPRESS;Initial Catalog=ApartmentManagment;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnectionString": "Data Source=HAFSIN;Initial Catalog=ApartmentManagment;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "TokenOptions": {
     "Audience": "https://github.com/huseyinafsin",
