--- a/Bussiness/Bussiness.csproj
+++ b/Bussiness/Bussiness.csproj
@@ -9,7 +9,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.4.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.1" />
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Security.AccessControl">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\5.0.0\ref\net5.0\System.Security.AccessControl.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
