Some services added, Dtos moved into new layer

--- a/Bussiness/Bussiness.csproj
+++ b/Bussiness/Bussiness.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Dto\Dto.csproj" />
   </ItemGroup>
 
   <ItemGroup>
