Payment some changes

--- a/PaymentService/PaymentService.csproj
+++ b/PaymentService/PaymentService.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Bussiness\Bussiness.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
+
 </Project>
