--- a/PaymentService/appsettings.json
+++ b/PaymentService/appsettings.json
@@ -1,8 +1,7 @@
 {
-
-  "PaymentServiceStoreSettings": {
-    "DatabaseName": "payments",
-    "ConnectionStrings": "mongodb+srv://huseyin:dcY8LWED0m9ZlwtZ@cluster0.60n71um.mongodb.net/?retryWrites=true&w=majority"
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://huseyin:dcY8LWED0m9ZlwtZ@cluster0.60n71um.mongodb.net/?retryWrites=true&w=majority",
+    "Database": "TodebPay"
   },
   "Logging": {
     "LogLevel": {
