Service injection gives error

--- a/WebUI/Properties/launchSettings.json
+++ b/WebUI/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5884",
-      "sslPort": 44307
+      "applicationUrl": "http://localhost:52759/",
+      "sslPort": 44349
     }
   },
   "profiles": {
@@ -17,12 +17,12 @@
     },
     "WebUI": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "dotnetRunMessages": "true"
     }
   }
 }
