--- a/PaymentService/appsettings.json
+++ b/PaymentService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://huseyin:dcY8LWED0m9ZlwtZ@cluster0.60n71um.mongodb.net/?retryWrites=true&w=majority",
-    "Database": "TodebPay"
+    "ConnectionString": "mongodb+srv://pantheon:12345@cluster0.las3t.mongodb.net/test",
+    "Database": "test"
   },
   "Logging": {
     "LogLevel": {
