--- a/PaymmentService/appsettings.json
+++ b/PaymmentService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://pantheon:12345@cluster0.las3t.mongodb.net/test",
-    "Database": "test"
+    "ConnectionString": "mongodb+srv://pantheon:12345@cluster0.j4s3f.mongodb.net/test",
+    "Database": "TodebPay"
   },
   "Logging": {
     "LogLevel": {
