Redis cahce, Hangfire implemented

--- a/ApartmentManagmentSystem/ApartmentManagmentSystem.csproj
+++ b/ApartmentManagmentSystem/ApartmentManagmentSystem.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BackgroundJobs\BackgroundJobs.csproj" />
     <ProjectReference Include="..\Bussiness\Bussiness.csproj" />
   </ItemGroup>
 
