--- a/ApartmentManagmentSystem/appsettings.json
+++ b/ApartmentManagmentSystem/appsettings.json
@@ -5,7 +5,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=.;Initial Catalog=ApartmentManagment;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "HangfireConnection": "Data Source=.;Initial Catalog=Hangfire;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "HangfireConnection": "Data Source=.;Initial Catalog=ApartmentHangfire;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "TokenOptions": {
     "Audience": "https://github.com/huseyinafsin",
@@ -18,7 +18,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
   "RedisEndpointInfo": {
