--- a/Bussiness/Bussiness.csproj
+++ b/Bussiness/Bussiness.csproj
@@ -22,10 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Abstracts\Apartment\" />
     <Folder Include="Abstracts\Payment\" />
-    <Folder Include="Concrete\Apartment\" />
     <Folder Include="Concrete\Payment\" />
+    <Folder Include="Configuration\Validation\FluentValidations\" />
   </ItemGroup>
 
 </Project>
