--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Utilities\NewFolder\**" />
+    <EmbeddedResource Remove="Utilities\NewFolder\**" />
+    <None Remove="Utilities\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.7" />
@@ -21,7 +27,6 @@
 
   <ItemGroup>
     <Folder Include="Entity\Models\" />
-    <Folder Include="Utilities\NewFolder\" />
   </ItemGroup>
 
 </Project>
