--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -109,6 +109,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dto\Dto.csproj" />
+    <ProjectReference Include="..\Entity\Entity.csproj" />
   </ItemGroup>
 
 </Project>
