initiaizlice tenantservice test

--- a/ApartmentManagmentTest/ApartmentManagmentTest.csproj
+++ b/ApartmentManagmentTest/ApartmentManagmentTest.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bussiness\Bussiness.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
