--- a/ApartmentManagmentSystem/appsettings.json
+++ b/ApartmentManagmentSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://pantheon:12345@cluster0.j4s3f.mongodb.net/test",
+    "ConnectionString": "<Put your mongodb instance here>",
     "Database": "TodebPay"
   },
   "ConnectionStrings": {
@@ -23,11 +23,11 @@
     }
   },
   "RedisEndpointInfo": {
-    "Endpoint": "redis-16764.c274.us-east-1-3.ec2.cloud.redislabs.com",
-    "Port": 16764,
-    "Username": "default",
-    "Password": "ok0PUsllykJ6lpIjLWskyhzclGfPT4Fj",
-    "DatabaseName": "Todeb"
+    "Endpoint": "<Put your redis endpoint informations here>",
+    "Port": 16764, // 16764 is default port
+    "Username": "< User name>",
+    "Password": "<Password >",
+    "DatabaseName": "<Database name>"
   },
   "AllowedHosts": "*"
 }
